# guess-number

./: .gitignore  CMakeLists.txt
include/: mydefs.h
src/: main.c
